[package]
name = "trash_dumper"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "LISP" 
keywords = [] 
repository = "https://github.com/myyrakle/trash_dumper" 
readme = "README.md"
documentation = "https://docs.rs/trash_dumper/latest/trash_dumper" 
homepage = "https://github.com/myyrakle/trash_dumper/blob/master/README.md" 

[dependencies]
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }